adding the settle module

--- a/ewald/ion0.html
+++ b/ewald/ion0.html
@@ -109,11 +109,15 @@
 <div>
   The formula is given by
 <div style="text-align:center">
-<a href="https://www.codecogs.com/eqnedit.php?latex=E&space;=&space;\frac12\frac{1}{4\pi\epsilon_0}\frac1L\left(&space;-\sigma^2&space;-\frac{2}{\sigma}&space;&plus;\sum_{\mathbf&space;p&space;\ne&space;0}&space;\frac{\mathrm{erfc}(\sqrt\pi&space;|\mathbf{p}|/\sigma)&space;}{&space;|\mathbf{p}|&space;}&space;&plus;\sum_{\mathbf&space;q&space;\ne&space;0}&space;\frac{1}{|\mathbf&space;q|^2}&space;\exp(-\pi\sigma^2\mathbf{q}^2)&space;\right)." target="_blank"><img src="https://latex.codecogs.com/gif.latex?E&space;=&space;\frac12\frac{1}{4\pi\epsilon_0}\frac1L\left(&space;-\sigma^2&space;-\frac{2}{\sigma}&space;&plus;\sum_{\mathbf&space;p&space;\ne&space;0}&space;\frac{\mathrm{erfc}(\sqrt\pi&space;|\mathbf{p}|/\sigma)&space;}{&space;|\mathbf{p}|&space;}&space;&plus;\sum_{\mathbf&space;q&space;\ne&space;0}&space;\frac{1}{|\mathbf&space;q|^2}&space;\exp(-\pi\sigma^2\mathbf{q}^2)&space;\right)." title="E = \frac12\frac{1}{4\pi\epsilon_0}\frac1L\left( -\sigma^2 -\frac{2}{\sigma} +\sum_{\mathbf p \ne 0} \frac{\mathrm{erfc}(\sqrt\pi |\mathbf{p}|/\sigma) }{ |\mathbf{p}| } +\sum_{\mathbf q \ne 0} \frac{1}{|\mathbf q|^2} \exp(-\pi\sigma^2\mathbf{q}^2) \right)." /></a>
+<a href="https://www.codecogs.com/eqnedit.php?latex=E&space;=&space;\frac12\frac{1}{4\pi\epsilon_0}\frac1L\left(&space;-\sigma^2&space;-\frac{2}{\sigma}&space;&plus;\sum_{\mathbf&space;p&space;\ne&space;0}&space;\frac{\mathrm{erfc}(\sqrt\pi&space;|\mathbf{p}|/\sigma)&space;}{&space;|\mathbf{p}|&space;}&space;&plus;\frac{1}{\pi}\sum_{\mathbf&space;q&space;\ne&space;0}&space;\frac{1}{|\mathbf&space;q|^2}&space;\exp(-\pi\sigma^2\mathbf{q}^2)&space;\right)." target="_blank"><img src="https://latex.codecogs.com/gif.latex?E&space;=&space;\frac12\frac{1}{4\pi\epsilon_0}\frac1L\left(&space;-\sigma^2&space;-\frac{2}{\sigma}&space;&plus;\sum_{\mathbf&space;p&space;\ne&space;0}&space;\frac{\mathrm{erfc}(\sqrt\pi&space;|\mathbf{p}|/\sigma)&space;}{&space;|\mathbf{p}|&space;}&space;&plus;\frac{1}{\pi}\sum_{\mathbf&space;q&space;\ne&space;0}&space;\frac{1}{|\mathbf&space;q|^2}&space;\exp(-\pi\sigma^2\mathbf{q}^2)&space;\right)." title="E = \frac12\frac{1}{4\pi\epsilon_0}\frac1L\left( -\sigma^2 -\frac{2}{\sigma} +\sum_{\mathbf p \ne 0} \frac{\mathrm{erfc}(\sqrt\pi |\mathbf{p}|/\sigma) }{ |\mathbf{p}| } +\frac{1}{\pi}\sum_{\mathbf q \ne 0} \frac{1}{|\mathbf q|^2} \exp(-\pi\sigma^2\mathbf{q}^2) \right)." /></a>
 </div>
 Here, the four terms in the parentheses are
 the background energy, self energy, real-space sum, and the reciprocal-space sum, respectively.
+
+NOTE: The background energy is the product of the background-charge in the main box and the electric potential of all screened point charges.
+
 </div>
+
 
 
 <form style="width:800px; margin:auto;">
