--- a/src/molsimul/methods/ewald/web/ion.html
+++ b/src/molsimul/methods/ewald/web/ion.html
@@ -3,12 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title> Ion in uniform compensating background </title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="js/vct.js"></script>
-  <script src="js/mat.js"></script>
-  <script src="js/mouse3d.js"></script>
-  <script src="js/draw.js"></script>
-  <script src="js/ion.js"></script>
+  <link rel="stylesheet" href="../../../../common/js/external/bootstrap/3.4.1/css/bootstrap.min.css">
   <style>
     body {
       width: 830px;
@@ -448,6 +443,13 @@
   J. Phys. Chem. <b>100</b> 1206-1215 (1996).
   </li>
 </ol>
+
+
+<script src="../../../../common/js/modules/clib/vct/vct.js"></script>
+<script src="../../../../common/js/modules/clib/vct/mat.js"></script>
+<script src="../../../../common/js/modules/utils/mouse3d.js"></script>
+<script src="../../../../common/js/modules/utils/draw.js"></script>
+<script src="js/ion.js"></script>
 
 </body>
 </html>
